# leap-accelerate

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  Dockerfile  Dockerfile.base  Dockerfile.bootstrap  Dockerfile_nvidia  Doxyfile  Doxyfile.bak  ProcessingComponentBindingGuide.md  README.md  clang-tidy-settings.json  dependencies.txt  test.sh
docs/: CMakeLists.txt  CMakeStyleGuide.md  CPlusPlusStyleGuide.md  Doxyfile.in  Submodules.md  requirements.txt
docs/src/: api.rst  cli.rst  conf.py  index.rst
docs/src/md/: Build.md  Docker.md  LeapAccelerateCLI.md  Submodules.md
docs/src/md/specs/: CPlusPlusStyleGuide.md  CudaStyleGuide.md
python/: README.md  build.py  pyproject.toml
python/leap/: MSExtractApp.py  __init__.py  __init__.pyi  functional.py  leap_processor.py
python/leap/cli/: batch.py  main.py  parsers.py  player.py  realtime.py
python/scripts/: stream_calibrate_example.py
python/tests/: test_leap_calibrator.py  test_measurement_set.py
src/icrar/leap-accelerate/: CMakeLists.txt  Calibrate.cc  Calibrate.h  LeapRemote.h  MetaData.cc  MetaData.h  PhaseRotate.cc  PhaseRotate.h  ReadMe.md  band_data.h  chgcentre.cc  chgcentre.h  config.cc  config.h.in  icrar_optional.hpp  pch.h  utils.cc  utils.h  visibility.h
src/icrar/leap-accelerate-cli/: Arguments.cc  Arguments.h  CMakeLists.txt  LeapAccelerateCLIConfig.json  ReadMe.md  main.cc  main_BACKUP_15717.cc  main_BASE_15717.cc  main_LOCAL_15717.cc
src/icrar/leap-accelerate-cli/tests/: Arguments.json  CMakeLists.txt  CommandLineTests.cc  E2EPerformanceTests.cc  JSONHelperTests.cc
src/icrar/leap-accelerate-client/: CMakeLists.txt  Calibrate.cc  Calibrate.h  LeapRemote.h  ReadMe.md  leap_cal_client.cc  leap_cal_client.h  leap_cal_client.h.orig  leap_cal_server.cc  leap_cal_server.h  main.cc
src/icrar/leap-accelerate-client/tests/: CMakeLists.txt
src/icrar/leap-accelerate-server/: CMakeLists.txt  ReadMe.md  leap_cal_server.cc  leap_cal_server.h
src/icrar/leap-accelerate/algorithm/: Calibrate.cc  Calibrate.h  ComputeOptionsDTO.h  ILeapCalibrator.h  Invert.h  LeapCalibratorFactory.cc  LeapCalibratorFactory.h  PhaseRotate.cc  PhaseRotate.cuh  PhaseRotate.h
src/icrar/leap-accelerate/algorithm/casa/: PhaseMatrixFunction.cc  PhaseMatrixFunction.h  PhaseRotate.cc  PhaseRotate.h
src/icrar/leap-accelerate/algorithm/cpu/: CpuComputeOptions.h  CpuLeapCalibrator.cc  CpuLeapCalibrator.h  Invert.h  PhaseMatrixFunction.cc  PhaseMatrixFunction.h  PhaseRotate.cc  PhaseRotate.h
src/icrar/leap-accelerate/algorithm/cuda/: CudaComputeOptions.cc  CudaComputeOptions.h  CudaLeapCalibrator.cc  CudaLeapCalibrator.cu  CudaLeapCalibrator.h  PhaseMatrixFunction.cuh  PhaseRotate.cu  PhaseRotate.h
src/icrar/leap-accelerate/common/: MVDirection.cc  MVDirection.h  MVPosition.h  MVuvw.cc  MVuvw.h  Range.h  Slice.cc  Slice.h  SphericalDirection.cc  SphericalDirection.h  Tensor3X.cc  Tensor3X.h  complex_extensions.h  constants.h  eigen_3_3_beta_1_2_support.h  eigen_cache.h  eigen_extensions.h  eigen_stringutils.h  enumutils.h  stream_extensions.h  vector_extensions.h
src/icrar/leap-accelerate/common/config/: Arguments.cc  Arguments.h
src/icrar/leap-accelerate/core/: InputType.cc  InputType.h  compute_implementation.cc  compute_implementation.h  git_revision.cc.in  git_revision.h  ioutils.h  logging.cc  logging.h  profiling.h  profiling_timer.h  resource_usage.cc  resource_usage.h  stream_out_type.cc  stream_out_type.h  version.cc  version.h
src/icrar/leap-accelerate/core/log/: Verbosity.cc  Verbosity.h  logging.cc  logging.h
src/icrar/leap-accelerate/core/memory/: ioutils.h  system_memory.cc  system_memory.h
src/icrar/leap-accelerate/core/profiling/: UsageReporter.cc  UsageReporter.h  resource_usage.cc  resource_usage.h  timer.h
src/icrar/leap-accelerate/cuda/: MetaDataCuda.cc  MetaDataCuda.cu  MetaDataCuda.h  ReadMe.md  compute_device.h  cuda_info.cu  cuda_info.h  cuda_utils.cuh  cudamatrix.cuh  cusolver_utils.h  device_matrix.h  device_tensor.h  device_vector.h  helper_cuda.cuh  helper_string.cuh
src/icrar/leap-accelerate/cuda/math/: matrix.cu  matrix.cuh  matrix.h  vector.cu  vector.cuh  vector.h
src/icrar/leap-accelerate/exception/: exception.cc  exception.h
src/icrar/leap-accelerate/json/: json_helper.cc  json_helper.h
src/icrar/leap-accelerate/math/: Integration.cc  Integration.h  casacore_helper.h  complex_extensions.h  eigen_helper.cc  eigen_helper.h  linear_math_helper.cc  linear_math_helper.h  math.cc  math.h  math_conversion.cc  math_conversion.h  matrix.h  vector.cu  vector.cuh  vector.h  vector_extensions.cc  vector_extensions.h
src/icrar/leap-accelerate/math/casa/: matrix.h  matrix_invert.cc  matrix_invert.h  vector.cc  vector.h
src/icrar/leap-accelerate/math/cpu/: Invert.cc  Invert.h  MatrixBaseAddons.h  ReadMe.md  eigen_extensions.cc  eigen_extensions.h  math.h  matrix.h  matrix3d.h  matrix_invert.h  svd.cc  svd.h  vector.cc  vector.h  vector.hpp
src/icrar/leap-accelerate/math/cuda/: ReadMe.md  math.cuh  matrix.cu  matrix.cuh  matrix.h  matrix_add.cu  matrix_invert.cu  matrix_invert.h  matrix_multiply.cu  (+8 more)
src/icrar/leap-accelerate/model/: Integration.cc  Integration.h  MetaData.cc  MetaData.h  PlasmaTM.h  visibility.h
src/icrar/leap-accelerate/ms/: MeasurementSet.cc  MeasurementSet.h  utils.cc  utils.h
src/icrar/leap-accelerate/python/: LeapAccelerateModule.cc  PyLeapCalibration.h  PyLeapCalibrator.cc  PyLeapCalibrator.h  PyMeasurementSet.cc  PyMeasurementSet.h  async.h  pybind_eigen.h
src/icrar/leap-accelerate/tests/: CMakeLists.txt  PhaseRotateTests.cc  PhaseRotateTests.cu  casacore_tests.cc  cuda_tests.cc  cuda_tests.cu  eigen_tests.cc  gtest_helper.h  main.cc  matrix_tests.cc  pch.h  test_helper.cc  test_helper.h  tests.cc  tests.cu  vector_tests.cc  wave_test.cc
src/icrar/leap-accelerate/wsclean/: README.md  banddata.h  chgcentre.cc  chgcentre.h  imagecoordinates.h  multibanddata.cpp  multibanddata.h  progressbar.cpp  progressbar.h  radeccoord.h
src/icrar/leap-cal-lib/: CMakeLists.txt
(+174 files in other folders)
